Think I'm done most of the styling, gonna try to solve the layout problem now

--- a/style.css
+++ b/style.css
@@ -1,9 +1,21 @@
-.calendarContainer {
+#outerContainer {
+    display: flex;
+}
+
+#calendarContainer {
     /* display: grid; */
     height: 600px;
     width: 720px;
     padding: 0px 10px 0px 10px;
     background-color: #ebebeb;
+}
+
+#numberContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-right: 10px;
+    text-align: right;
 }
 
 .hour {
@@ -13,6 +25,41 @@
 
 .smallerLighter {
     color: #b4b4b4;
-    font-size: 12px;
-    font-weight: 500;
+    font-size: 11px;
+    font-weight: 550;
+}
+
+.greyBar {
+    background-color: #e0e0e0;
+    height: 600px;
+    width: 3px;
+    /* padding-left: 10px; */
+}
+
+.calendarEvent {
+    display: flex;
+    /* width: auto;
+    height: 100px; */
+    background-color: #ffffff;
+}
+
+.calendarEventTextContainer {
+    display: flex;
+    flex-direction: column;
+}
+
+.blueBar {
+    background-color: #606ea2;
+    width: 5px;
+}
+
+.eventText {
+    color: #7683ae;
+    font-weight: 800;
+    padding: 5px 5px 5px 5px;
+    font-size: 18x;
+}
+
+.padding {
+    padding-left: 5px;
 }
